fixed the overflow of the width in CSS

--- a/app/src/main/resources/templates/quiz-template/css/style.css
+++ b/app/src/main/resources/templates/quiz-template/css/style.css
@@ -469,6 +469,7 @@ button {
     width: 100%;
     float: left;
     margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .read_bt a {
